54-gke-app-cicd/k8s/dev/patch_deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: app
spec:
  replicas: 2
  template:
    metadata:
      name: app
    spec:
      serviceAccountName: ksa
      containers:
      - name: app
        readinessProbe:
          initialDelaySeconds: 1
          periodSeconds: 1
          httpGet:
            path: /
            port: 8080
        livenessProbe:
          periodSeconds: 15
          httpGet:
            path: /
            port: 8080
