54-gke-app-cicd/k8s/dev/test.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: budita
    environment: dev
    istio-injection: enabled
    role: frontend
  name: frontend
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: budita
    environment: dev
    role: frontend
  name: svc
  namespace: frontend
spec:
  ports:
  - name: tcp-port
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: budita
    environment: dev
    role: frontend
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: budita
    environment: dev
    role: frontend
  name: frontend
  namespace: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: budita
      environment: dev
      role: frontend
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: budita
        environment: dev
        role: frontend
      name: frontend
    spec:
      containers:
      - env:
        - name: PORT
          value: "8080"
        - name: TARGET
          value: world!!
        - name: ENVIRONMENT
          value: dev
        - name: LOG_LEVEL
          value: info
        image: us-central1-docker.pkg.dev/prj-gke-c-cicd-pipeline-7989/prj-gke-c-cicd-pipeline-7989-cicd-image-repo/frontend:abda88c
        livenessProbe:
          initialDelaySeconds: 5
          periodSeconds: 5
          tcpSocket:
            port: 8080
        name: frontend
        ports:
        - containerPort: 8080
          name: http
        readinessProbe:
          initialDelaySeconds: 5
          periodSeconds: 5
          tcpSocket:
            port: 8080
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
      serviceAccountName: frontend
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  labels:
    app: budita
    environment: dev
    role: frontend
  name: default-ext-gateway
  namespace: frontend
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - '*'
    port:
      name: http
      number: 80
      protocol: HTTP
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  labels:
    app: budita
    environment: dev
    role: frontend
  name: vsvc
  namespace: frontend
spec:
  gateways:
  - default-ext-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: svc
        port:
          number: 80
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  labels:
    app: budita
    environment: dev
    role: frontend
  name: allow-all
  namespace: frontend
spec:
  rules:
  - {}
